testsuite/tests/indexed-types/should_fail/SimpleFail2a.stderr
SimpleFail2a.hs:11:3: error: [GHC-95424]
    • Type indexes must match class instance head
      Expected: Sd Int
        Actual: Sd a
    • In the associated data family instance declaration for ‘Sd’
      In the instance declaration for ‘C Int’

SimpleFail2a.hs:11:21: error: [GHC-34447]
    Conflicting family instance declarations:
      Sd a -- Defined at SimpleFail2a.hs:11:21
      Sd Int -- Defined at SimpleFail2a.hs:12:11

SimpleFail2a.hs:11:21: error: [GHC-34447]
    Conflicting family instance declarations:
      Sd a -- Defined at SimpleFail2a.hs:11:21
      Sd Int -- Defined at SimpleFail2a.hs:13:11

